<resources>
    <string name="app_name">ABN AMRO Repos</string>
    <string name="repo_visibility_description">Visibility:</string>
    <string name="repo_private_description">Private:</string>
    <string name="repo_fullname_description">Full name:</string>
    <string name="repo_description_description">Description:</string>
    <string name="go_to_repo_btn_text">Go to repo</string>
    <string name="owners_avatar_img_description">Repo Owner\'s avatar</string>
    <string name="retry_button_text">Retry</string>
    <string name="try_again_text">Oops! Please try again!</string>
</resources>