<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:paddingTop="5dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp">

    <ImageView
        android:id="@+id/ownersAvatarImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/owners_avatar_img_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp">

        <TextView
            android:id="@+id/nameTextView"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/visibilityDescriptionTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="ABN AMRO Repo Name" />

        <TextView
            android:id="@+id/visibilityDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_visibility_description"
            app:layout_constraintEnd_toStartOf="@+id/visibilityValueTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="visibilityValueTextView" />


        <TextView
            android:id="@+id/visibilityValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/visibilityDescriptionTextView"
            tools:text="Public" />

        <TextView
            android:id="@+id/isPrivateDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repo_private_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/visibilityDescriptionTextView" />

        <TextView
            android:id="@+id/isPrivateValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/isPrivateDescriptionTextView"
            tools:text="No" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>